# plonky2_polymerdao

./: .gitmodules  Cargo.toml
evm/src/: all_stark.rs  verifier.rs
evm/src/generation/: mpt.rs
evm/src/keccak/: keccak_stark.rs
evm/tests/: transfer_to_new_addr.rs
field/: Cargo.toml
field/src/: fft.rs  field_types.rs  goldilocks_field.rs  lib.rs  types.rs
field/src/nonnative/: algebra.rs  mod.rs
nonnative/: Cargo.toml
nonnative/src/: gadgets.rs  gates.rs  lib.rs
nonnative/src/gadgets/: biguint.rs  mod.rs  nonnative.rs
nonnative/src/gates/: biguint.rs  mod.rs  nonnative.rs  vars.rs
plonky2/: Cargo.toml
plonky2/examples/: bench_recursion.rs  merkle_proof.rs
plonky2/src/: lib.rs
plonky2/src/fri/: oracle.rs
plonky2/src/gates/: arithmetic_nonnative.rs  mod.rs
plonky2/src/iop/: mod.rs  nonnative_target.rs  target.rs  witness.rs
plonky2/src/plonk/: circuit_builder.rs  circuit_data.rs  prover.rs  vars.rs
plonky2/src/recursion/: recursive_verifier.rs
system_zero/src/: system_zero.rs  util.rs
