[package]
name = "nonnative"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[dependencies]
anyhow = { version = "1.0.40", default-features = false }
itertools = { version = "0.10.0", default-features = false }
num = { version = "0.4.0", default-features = false }
plonky2 = { path = "../plonky2", default-features = false }
plonky2_ecdsa = { path = "../ecdsa", default-features = false }
plonky2_u32 = { path = "../u32", default-features = false }
slice-of-array = "0.3.2"

[dev-dependencies]
rand = { version = "0.8.4", default-features = false, features = ["getrandom"] }
